<resources>
    <string name="app_name">paddycureseller</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="to_register"><u>Register</u></string>
    <string name="to_login"><u>Login</u></string>
    <string name="title_activity_home">HomeActivity</string>
    <string name="welcome">Welcome</string>
    <string name="full_name">Full Name</string>
    <string name="seller_guide">Seller Guide</string>
    <string name="your_dashboard">Your Dashboard</string>
    <string name="incoming_orders">Incoming Orders</string>
    <string name="sent_orders">Orders Sent</string>
    <string name="your_product">Your Product</string>
    <string name="product_title">Default Product Title in here max 2 line</string>
    <string name="product_details">Product Details</string>
    <string name="count_sold">275 Terjual</string>
    <string name="description">Description</string>
    <string name="add_product">Add Product</string>
    <string name="select_photo_from">Select Photo From</string>
    <string name="gallery">Gallery</string>
    <string name="camera">Camera</string>
    <string name="photos_preview">Photos Preview</string>
    <string name="product_name">Product Name</string>
    <string name="product_cost">Cost (Rp.)</string>
    <string name="product_desc">Product Description</string>
    <string name="product_stok">Stok Saat Ini</string>
    <string name="profile">Profile</string>
    <string name="about_application">About Application</string>
    <string name="edit_profile">Edit Profile</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="new_password">New Password</string>
    <string name="telp_number">Phone Number</string>
    <string name="address">Address</string>
    <string name="title_home">Home</string>
    <string name="title_profile">Profile</string>
    <string name="edit_product">Edit Product</string>
</resources>